Added link to Netlify

--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hosting</h1>
+    <h1>Hosted with <a href="https://www.netlify.com"></a>Netlify</h1>
 
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/176/425/original/server_room_image.jpg?1765136205"
       alt="server room"
-    />
-
-    <img
-      src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/176/426/original/webhosting_sites.png?1765136214"
-      alt="webhost sites"
     />
   </body>
 </html>
