--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hosted today with <a href="https://www.netlify.com"></a>Netlify</h1>
+    <h1>Hosted today with <a href="https://www.netlify.com">Netlify</a></h1>
 
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/176/425/original/server_room_image.jpg?1765136205"
