Contact button added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github repo example</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hosted today with <a href="https://www.netlify.com">Netlify</a></h1>
+
+    <a href="mailto:ruthlee2376@gmail.com" class="btn btn-primary"
+      >Contact me</a
+    >
 
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/176/425/original/server_room_image.jpg?1765136205"
