cleaned up css styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>Hosted today with <a href="https://www.netlify.com">Netlify</a></h1>
 
-    <a href="mailto:ruthlee2376@gmail.com" class="btn btn-primary"
+    <a href="mailto:test2376@gmail.com" class="btn btn-primary contact-btn"
       >Contact me</a
     >
 
